fixed spacing for mobile devices

--- a/css/custom-styles.less
+++ b/css/custom-styles.less
@@ -253,6 +253,10 @@ ul.strengths,
     }
 }
 
+.how-made ul {
+    line-height: 190%;
+}
+
 ul.skills,
 ul.tools {
     li {
